--- a/Courseline/res/values/strings.xml
+++ b/Courseline/res/values/strings.xml
@@ -27,9 +27,15 @@
     <string name="title_activity_deletion">DeletionActivity</string>
     <string name="title_activity_home">Dashboard</string>
     <string name="title_activity_subject">SubjectActivity</string>
+    <string name="title_activity_notes">NotesActivity</string>
     <string name="delete_head"></string>
     <string name="notReg">Not Registered? Please Sign Up.</string>
     <string name="search_hint">Enter Course Number</string>
     <string name="desc">Search button</string>
+    <string name="sub_head"></string>
+    <string name="notes_head"></string>
+    <string name="edit_notes">Edit Notes</string>
+    
+    
 
 </resources>
